--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <br>
     <h2>simulado circuito de pisca LED com Arduino no Tinkercad</h2>
     <div>
-        <img src="piscaled.jpeg" alt="imagem do pisca led">       
+        <img src="piscaled.jpg" alt="imagem do pisca led">       
         <br>
         <small>Fonte: Tinkercad</small>
         <a href="https://www.tinkercad.com/dashboard">Tinkercad</a>
